<resources>
    <string name="app_name">Food&amp;Drinks4You</string>
    <string name="startMessage"><![CDATA[Welcome to Food&Drinks4You]]></string>
    <string name="firstPageButton">Continue to your shopping adventure</string>
    <string name="choose">Choose food or drink</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="previous">Previous</string>
    <string name="menu">Menu</string>
    <string name="choose_groceries">Choose groceries</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="snacks">Snacks</string>
    <string name="drinks">Drinks</string>
    <string name="shopping_cart">Your Shopping Cart</string>
    <string name="buy">Buy</string>
    <string name="order">Order sent</string>
    <string name="thanks">Thanks for your purchase</string>
    <string name="back_to_menu">Continue Shopping</string>
    <string name="back">back</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="dialog_name">First Text</string>
    <string name="wait">Wait few moments.</string>
    <string name="making_order">We are making your order...</string>
    <string name="food_drinks4you"><![CDATA[Food&Drinks4You]]></string>
    <string name="food_drinks4you_register"><![CDATA[Food&Drinks4You \n Register Page]]></string>
    <string name="login">Login</string>
    <string name="new_email">Enter new email</string>
    <string name="new_password">Enter new password</string>
    <string name="quick_food">Get your food quickly in few minutes</string>
    <string name="action_settings">Settings</string>
    <string name="get_food_quickly">Get your food quickly in few minutes</string>
    <string name="enter_email">Enter your email</string>
    <string name="new_user">New user ?</string>
    <string name="enter_password">Enter your password</string>
    <string name="order_on_way">Your order is on its way</string>
    <string name="register">Register</string>
    <string name="to_login_page">Continue to login page</string>
    <string name="first_text">First Text</string>
    <string name="second_text">Second Text</string>
    <string name="value">%</string>
    <string name="empty_basket">Sorry your basket is empty.</string>
    <string name="progress">progress</string>
    <string name="cant_access">Couldn\'t access your firebase database</string>
    <string name="input_data">Please input your data</string>
    <string name="successful_register">User registered successfully.</string>
    <string name="cant_register">Could not register.. please try again.</string>

</resources>
