<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
     android:id="@+id/ivStartPicture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:src="@drawable/main_background"
     android:scaleType="centerCrop"
     />

<LinearLayout
    android:layout_width="400dp"
    android:layout_height="450dp"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:background="@drawable/rounded_corner_main"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center"
    >

    <TextView
    android:id="@+id/tvLogin"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textStyle="bold"
    android:text="@string/food_drinks4you"
    android:textColor="@color/colorWhite"
    android:textSize="40sp"
    />

    <TextView
    android:id="@+id/tvLoginQuick"
    android:layout_marginStart="39dp"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:text="@string/get_food_quickly"
    android:textColor="@color/colorWhite"
    android:textSize="15sp"
    />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/email_icon_foreground" />

    <EditText
     android:id="@+id/etEnterEmail"
     android:layout_marginTop="50dp"
     android:layout_width="310dp"
     android:layout_height="30dp"
     android:layout_marginLeft="50dp"
     android:layout_marginRight="20dp"
     android:background="@color/colorWhite"
     android:layout_alignParentStart="true"
     android:layout_centerVertical="true"
     android:hint="@string/enter_email"
     android:textColor="@color/colorBlack"
     android:gravity="center"
     android:textColorHint="#63000000"
     />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/password_icon_foreground" />

        <EditText
            android:id="@+id/etEnterPassword"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="20dp"
            android:layout_width="310dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWhite"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:hint="@string/enter_password"
            android:gravity="center"
            android:textColorHint="#63000000"
            android:inputType="textPassword"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:gravity="center"
            android:onClick="onClickLogin"
            />
        <LinearLayout
            android:id="@+id/linearNewUser"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                />
    <Button
        android:id="@+id/btnRegister"
        android:layout_marginEnd="10dp"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:onClick="onClickRegister"
        />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

</RelativeLayout>