<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity"
    android:orientation="vertical"

    >


    <TextView
        android:id="@+id/tvOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <ImageView
        android:id="@+id/ivDone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvOrder"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/green_check"
        />
    <TextView
        android:id="@+id/tvThanks"
        android:layout_below="@id/ivDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/order_on_way"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/back_to_menu"
        android:onClick="goBackToMenu"
        android:textStyle="italic"
        />


</RelativeLayout>