<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/ivStartPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_background"
        android:scaleType="centerCrop"
        />

    <LinearLayout

        android:layout_width="400dp"
        android:layout_height="450dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_main"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/food_drinks4you_register"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            />

        <TextView
            android:id="@+id/tvLoginQuick"
            android:layout_marginStart="55dp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/quick_food"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/username_icon_foreground" />

            <EditText
                android:id="@+id/etNewEmail"
                android:layout_marginTop="50dp"
                android:layout_width="310dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:hint="@string/new_email"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textColorHint="#63000000"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/password_icon_foreground" />

            <EditText
                android:id="@+id/etNewPassword"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="20dp"
                android:layout_width="310dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:hint="@string/new_password"
                android:gravity="center"
                android:textColorHint="#63000000"
                android:inputType="textPassword"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button
            android:id="@+id/btnNewRegister"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:layout_centerInParent="true"
            android:onClick="onClickNewUser"
            />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnGoBack"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/to_login_page"
        android:layout_marginBottom="20dp"
        android:onClick="onClickGoToLogin"
        android:textStyle="italic"
        />

</RelativeLayout>