<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/dialogRelative"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<LinearLayout
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@drawable/rounded_corner_item"

    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/ivDialogPicture"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tvDialogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:text="@string/first_text"
            android:textColor="@color/itemColorText"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tvDialogPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/second_text"
            android:textColor="@color/itemColorText"

            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/btnDialogAdd"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:background="@color/menuThird"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_to_basket"
            android:layout_weight="1"
            />
</LinearLayout>

</RelativeLayout>